feat: 到貨通知、商品問答、銷售報表、訂單備註 (#67)
四個功能一起做完。

## 到貨通知

秒殺 99.9% 的人搶不到，而他們現在什麼都做不了。訂閱把一次失敗的請求
變成一次回訪。

**觸發用輪詢而不是讓庫存服務回呼**：補貨有好幾條路徑（退貨、逾時關單、
活動釋放、人工補貨），逐條掛勾一定會漏掉某一條；而且回呼會讓庫存
反過來依賴通知，方向是錯的。代價是最多晚一個掃描週期，對「到貨通知」
完全無所謂。

**先標記已通知，再寫通知。** 反過來的話，寫到一半失敗重跑時前面那些人
會再收到一次——重複的到貨通知比漏掉一次更讓人惱火。

`markNotified` 帶 `notified_at is null` 條件，讓標記本身就是條件式 UPDATE：
兩個節點同時補貨只有一個拿到非零筆數，另一個看到 0 就知道別人先做了。

兩道防灌水：一人同時最多等 50 個 SKU、一次補貨最多通知 500 人。
通知寫進 notification 表，由既有的寄送排程每 30 秒一批 50 封送出——
那一層本來就在削峰。

## 商品問答

與評價的差別是**誰能發言**：評價只有買過的人能寫（那是它可信的原因），
問答任何登入者都能問——還沒買的人才有問題要問。

**回答與公開是同一個動作**：只回答不公開等於白回答，而公開一個沒有答案的
問題只會在商品頁留下一個沒人理的問題。所以未回答的預設不公開。

## 銷售報表

**只算已付款以後的訂單**：待付款的還不是營收，算進去會讓報表在
逾時關單之後自己往下掉——那種數字沒有人敢用。

已退款的訂單仍計入 revenue，退掉的金額另外用 refunded 表示。直接扣掉的話
就看不出「賣了多少」與「退了多少」，而那兩個要分開看。

熱銷金額用 `allocated_amount` 而非 `unit_price × quantity`：有折扣時
後者是使用者沒付過的錢。

查詢區間上限 366 天——沒有上限的話一次「查全部」會掃全表，
而後台跟前台共用同一個資料庫。結束日含當天，少一天是報表最常見的錯。

## 訂單備註

**兩個欄位而不是一個。** 共用的話，客服寫的「疑似黃牛」會出現在
買家的訂單頁上——那不是靠「記得別亂寫」能避免的問題。

- `buyer_note`：`updatable = false`，與訂單金額同樣建立後不可變（它是出貨依據）
- `staff_note`：可改，而且**刻意不走 Order 聚合**——它是營運的工作筆記，
  不是訂單事實的一部分，不該為了它打破訂單不可變那條規則

`Order.place` / `restore` 用多載加參數，20 個既有呼叫點一個都不用改。

## 兩個被既有守衛擋下來的地方

`NotificationComposer` 的窮盡 switch 在加 `RESTOCKED` 時編譯失敗，
逼我回答「這一種要說什麼」。答案是它不走那裡——文字要帶商品名，
而那個方法只拿得到單號與金額。留一個明確拋例外的 case 保持窮盡。

`NotificationDispatchServiceTest` 那條「並非每個事件都通知」也紅了。
判準是「使用者需不需要因為它做什麼」，而 RESTOCKED 過得了這關：
他主動訂閱、而且確實要去買。更新守衛並把理由寫進去。

## 驗證

實機全部跑過：

- 到貨通知：訂閱、重複訂閱只留一筆、排程掃到補貨並通知 1 人、
  產生 RESTOCKED 通知、**下一輪不再重複通知**
- 問答：提問（回 published=false）、太短擋下 400、匿名可讀、
  未回答時商品頁看不到、回答後公開且從待回覆清單消失
- 報表：35 筆已付款 / 營收 201 萬 / 退款 40 萬 / 淨營收 161 萬、
  熱銷排行、開始日晚於結束日擋下
- 備註：結帳可填、訂單頁顯示、內部註記只在 admin 端點

測試：domain 334 / application 258 / api 37 / 前端 87 全過，typecheck 無錯。

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>